2004-03-03  Not Zed  <NotZed@Ximian.com>

	** See bug #53738.

	* mail-ops.c (fetch_mail_fetch): if we've been cancelled, uncancel
	so syncing can work.  and always sync the folder (with expunge if
	deleting).

	** See bug #54924.

	* em-utils.c (em_utils_selection_set_urilist): Try to get the drop
	filename from the message subject, or folder name.
	(em_utils_empty_trash): kill warning.

	** See bug #54121.

	* mail-component.c (impl_requestCreateItem)
	(emc_new_folder_response): Hack in a nastish implementation of
	create folder for the new menu.
	(impl__get_userCreatableItems): add 'new mail folder' to new
	button.

2004-03-03  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree-model.c (em_folder_tree_model_set_folder_info):
	if we have the folder opened already, and its the outbox, then use
	the total count instead of unread count.  Bit of hack, but copies
	mail-folder-cache stuff.

	* mail-component.c (mc_add_store): renamed from
	mail_component_add_store, internal call.  Added a done callback.
	(mc_add_local_store): renamed from mc_add_store, callback for
	local store.
	(mail_component_add_store): call mc_add_store to do the work.
	(mc_add_local_store_done): ugh, the target of all this shit - note
	all the default folders now they should be setup.

	* mail-folder-cache.c (mail_note_folder): clean up the logic a
	bit.  was gonna do osmething else but it didn't work.
	
2004-03-02  Not Zed  <NotZed@Ximian.com>

	* mail-send-recv.c (mail_send): if we're already sending, up the
	again count to tell it we need to re-send again.
	(receive_done): if we've been asked to run a send again while we
	were already running it, run it again to make sure we didn't miss
	any new messages.  See bug #46839.

	* em-mailer-prefs.c (em_mailer_prefs_construct): update
	check_incoming_imap changes for merge conflicts.
	(settings_changed): i have no idea what these changes jeff did do,
	but check_incoming_imap is no longer needed, so i've deleted most
	of it.
